<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_lensordering"
            android:title="@string/lensordering" />
        <item
            android:id="@+id/nav_myorder"
            android:title="@string/myorder" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_sentorder"
            android:title="@string/sentorder" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_employeemanagement"
            android:title="@string/employeemanagement" />
        <item
            android:id="@+id/nav_contactinformation"
            android:title="@string/contactinformation" />
        <item
            android:id="@+id/nav_myaccount"
            android:title="@string/myaccount" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
