<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/order_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="@dimen/text_medium"
            android:layout_gravity="center|left"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium"
            android:text="@string/orderid"
            android:layout_weight="1"
            android:layout_gravity="center|left"
            />
        <android.support.v7.widget.AppCompatTextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium"
            android:text="@string/status"
            android:layout_weight="1"
            android:layout_gravity="center|left"
            />


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium"
            android:text="@string/consumername"
            android:layout_weight="1"
            android:layout_gravity="center|left"
            />
    </LinearLayout>
</RelativeLayout>
