<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
<include
    android:visibility="gone"
    android:id="@+id/custom_progressbar"
    layout="@layout/custom_progressbar"/>
    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/vs_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/icon_for_design"/>

        <TextView
            android:id="@+id/welcomeback"
            android:layout_below="@+id/vs_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeback"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/text_large"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/darkgray"/>

        <TextView
            android:id="@+id/signintocontinue"
            android:layout_below="@+id/welcomeback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signintocontinue"
            android:textColor="@color/darkgray"/>


        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/signintocontinue"
            android:id="@+id/textinput_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/text_medium">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput_userpassword"
            android:layout_below="@+id/textinput_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_xxlarge">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_login_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>





    </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/action_login_short"
        android:background="@drawable/custombtn_bg"
        android:textColor="@color/darkgray"
        android:textStyle="bold" />

</RelativeLayout>